--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,8 +54,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/linear_header"
-            >
+            android:layout_below="@+id/linear_header">
 
             <TextView
                 android:id="@+id/welcome"
@@ -69,8 +68,8 @@
                 android:id="@+id/admin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="3dp"
                 android:layout_alignParentRight="true"
+                android:layout_marginLeft="3dp"
                 android:textColor="@color/colorRed" />
 
         </RelativeLayout>
@@ -138,8 +137,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.4"
-                android:orientation="vertical"
-                android:gravity="center">
+                android:gravity="center"
+                android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/img_update_lead"
@@ -169,64 +168,64 @@
             android:orientation="horizontal"
             android:weightSum="1">
 
-     <!--       <LinearLayout
-                android:id="@+id/linear_master"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.4"
-                android:orientation="vertical"
-                android:gravity="center">
+            <!--       <LinearLayout
+                       android:id="@+id/linear_master"
+                       android:layout_width="0dp"
+                       android:layout_height="match_parent"
+                       android:layout_weight="0.4"
+                       android:orientation="vertical"
+                       android:gravity="center">
 
-                <ImageView
-                    android:id="@+id/img_master"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:src="@drawable/master" />
+                       <ImageView
+                           android:id="@+id/img_master"
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           android:layout_gravity="center"
+                           android:src="@drawable/master" />
 
-                <TextView
-                    android:id="@+id/txtmaster"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:text="@string/master"
-                    android:textColor="@color/colorRed" />
+                       <TextView
+                           android:id="@+id/txtmaster"
+                           android:layout_width="match_parent"
+                           android:layout_height="wrap_content"
+                           android:gravity="center_horizontal"
+                           android:text="@string/master"
+                           android:textColor="@color/colorRed" />
 
-            </LinearLayout>
+                   </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/linear_setting"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.4"
-                android:orientation="vertical"
-                android:gravity="center">
+                   <LinearLayout
+                       android:id="@+id/linear_setting"
+                       android:layout_width="0dp"
+                       android:layout_height="match_parent"
+                       android:layout_weight="0.4"
+                       android:orientation="vertical"
+                       android:gravity="center">
 
-                <ImageView
-                    android:id="@+id/img_setting"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:src="@drawable/setting" />
+                       <ImageView
+                           android:id="@+id/img_setting"
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           android:layout_gravity="center"
+                           android:src="@drawable/setting" />
 
-                <TextView
-                    android:id="@+id/txtsetting"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:text="@string/setting"
-                    android:textColor="@color/colorRed" />
+                       <TextView
+                           android:id="@+id/txtsetting"
+                           android:layout_width="match_parent"
+                           android:layout_height="wrap_content"
+                           android:gravity="center_horizontal"
+                           android:text="@string/setting"
+                           android:textColor="@color/colorRed" />
 
-            </LinearLayout>    -->
+                   </LinearLayout>    -->
 
             <LinearLayout
                 android:id="@+id/linear_mis_reports"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="0.5"
                 android:layout_marginLeft="50dp"
-                android:orientation="vertical"
-                android:gravity="center">
+                android:layout_weight="0.5"
+                android:gravity="center"
+                android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/img_mis"
@@ -246,15 +245,14 @@
             </LinearLayout>
 
 
-
             <LinearLayout
                 android:id="@+id/linear_notification"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="0.5"
                 android:layout_marginRight="50dp"
-                android:orientation="vertical"
-                android:gravity="center">
+                android:layout_weight="0.5"
+                android:gravity="center"
+                android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/img_notification"
@@ -275,8 +273,23 @@
             </LinearLayout>
 
 
-
         </LinearLayout>
+    <LinearLayout
+        android:id="@+id/linear_attendence"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.5"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:weightSum="1.2">
+        <ImageView
+            android:id="@+id/attendence"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:src="@drawable/attendence" />
+
+    </LinearLayout>
 
 
     </LinearLayout>
