Date Picker issue is done by Aniket Adsul

--- a/app/src/main/res/layout/activity_lead.xml
+++ b/app/src/main/res/layout/activity_lead.xml
@@ -225,7 +225,7 @@
                     android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                     android:drawablePadding="@dimen/view_padding"
                     android:hint="@string/hintfname"
-                    android:inputType="textPersonName"
+                    android:inputType="textCapWords|textCapSentences"
                     android:maxLength="50"
                     android:padding="@dimen/view_padding"
                     android:singleLine="true"
@@ -259,7 +259,7 @@
                     android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                     android:drawablePadding="@dimen/view_padding"
                     android:hint="@string/hintmname"
-                    android:inputType="textPersonName"
+                    android:inputType="textCapWords|textCapSentences"
                     android:maxLength="50"
                     android:padding="@dimen/view_padding"
                     android:singleLine="true"
@@ -293,7 +293,7 @@
                     android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                     android:drawablePadding="@dimen/view_padding"
                     android:hint="@string/hintlname"
-                    android:inputType="textPersonName"
+                    android:inputType="textCapWords|textCapSentences"
                     android:maxLength="50"
                     android:padding="@dimen/view_padding"
                     android:singleLine="true"
