--- a/app/src/main/res/layout/activity_lead_update.xml
+++ b/app/src/main/res/layout/activity_lead_update.xml
@@ -263,7 +263,7 @@
                         android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                         android:drawablePadding="@dimen/view_padding"
                         android:hint="@string/hintfname"
-                        android:inputType="textPersonName"
+                        android:inputType="textCapWords|textCapSentences"
                         android:maxLength="50"
                         android:padding="@dimen/view_padding"
                         android:singleLine="true"
@@ -297,7 +297,7 @@
                         android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                         android:drawablePadding="@dimen/view_padding"
                         android:hint="@string/hintmname"
-                        android:inputType="textPersonName"
+                        android:inputType="textCapWords|textCapSentences"
                         android:maxLength="50"
                         android:padding="@dimen/view_padding"
                         android:singleLine="true"
@@ -331,7 +331,7 @@
                         android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                         android:drawablePadding="@dimen/view_padding"
                         android:hint="@string/hintlname"
-                        android:inputType="textPersonName"
+                        android:inputType="textCapWords|textCapSentences"
                         android:maxLength="50"
                         android:padding="@dimen/view_padding"
                         android:singleLine="true"
