--- a/app/src/main/res/layout/activity_lead_update.xml
+++ b/app/src/main/res/layout/activity_lead_update.xml
@@ -1028,9 +1028,13 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="@dimen/layout_margin"
                                 android:layout_weight="1"
+                                android:focusable="false"
+                                android:clickable="false"
+                                android:windowSoftInputMode="stateHidden"
+                                android:inputType="none"
+                                android:textIsSelectable="true"
                                 android:background="@drawable/edit_background"
                                 android:drawablePadding="@dimen/view_padding"
-                                android:inputType="text"
                                 android:maxLength="50"
                                 android:padding="@dimen/view_padding"
                                 android:singleLine="true"
@@ -1138,7 +1142,6 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_margin="5dp"
-                            android:background="@color/common_google_signin_btn_text_light_disabled"
                             android:text="@string/opportunity_pitched2"
                             android:textColor="@android:color/black"
                             android:layout_weight="1" />
