--- a/app/src/main/res/layout/activity_status_report.xml
+++ b/app/src/main/res/layout/activity_status_report.xml
@@ -41,7 +41,29 @@
 
                 </include>
             </LinearLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/linear_header">
 
+                <TextView
+                    android:id="@+id/welcome"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toLeftOf="@+id/admin"
+                    android:text="@string/welcome"
+                    android:textColor="@color/colorRed" />
+
+                <TextView
+                    android:id="@+id/admin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginLeft="3dp"
+                    android:layout_marginRight="5dp"
+                    android:textColor="@color/colorRed" />
+
+            </RelativeLayout>
 
             <LinearLayout
 
