--- a/app/src/main/res/layout/my_calendar_view.xml
+++ b/app/src/main/res/layout/my_calendar_view.xml
@@ -26,13 +26,35 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"></include>
     </LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/header">
 
+        <TextView
+            android:id="@+id/welcome"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@+id/admin"
+            android:text="@string/welcome"
+            android:textColor="@color/colorRed" />
+
+        <TextView
+            android:id="@+id/admin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginLeft="3dp"
+            android:layout_marginRight="10dp"
+            android:textColor="@color/colorRed" />
+
+    </RelativeLayout>
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="100dp"
         android:background="@color/lightgray"
         android:orientation="vertical">
 
