--- a/app/src/main/res/layout/activity_status_report.xml
+++ b/app/src/main/res/layout/activity_status_report.xml
@@ -44,6 +44,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/white"
                 android:layout_below="@+id/linear_header">
 
                 <TextView
@@ -64,6 +65,11 @@
                     android:textColor="@color/colorRed" />
 
             </RelativeLayout>
+
+
+
+
+            
 
             <LinearLayout
 
