--- a/app/src/main/res/layout/layout_status_reports.xml
+++ b/app/src/main/res/layout/layout_status_reports.xml
@@ -255,6 +255,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:clickable="false"
             android:drawablePadding="@dimen/view_padding" />
     </LinearLayout>
 
