Bugs Resolved By Aniket Adsul

--- a/app/src/main/res/layout/master_custom_dialog.xml
+++ b/app/src/main/res/layout/master_custom_dialog.xml
@@ -84,7 +84,7 @@
 
 
         <Button
-            android:id="@+id/btn1_create_close_lead"
+            android:id="@+id/open_status_report"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/colorRed"
